[gd_scene load_steps=2 format=3 uid="uid://d0sxhc6l66egc"]

[ext_resource type="Script" path="res://addons/zylann.editor_debugger/dock.gd" id="1"]

[node name="EditorDebugger" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 238.0
offset_bottom = 347.0
script = ExtResource("1")

[node name="PopupMenu" type="PopupMenu" parent="."]
hide_on_item_selection = false
hide_on_checkable_item_selection = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ShowInInspectorCheckbox" type="CheckBox" parent="VBoxContainer"]
layout_mode = 2
text = "Show in inspector"

[node name="Tree" type="Tree" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
allow_rmb_select = true

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Hello World"

[node name="SaveBranchFileDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.tscn ; TSCN", "*.scn ; SCN", "*.res ; RES")

[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="toggled" from="VBoxContainer/ShowInInspectorCheckbox" to="." method="_on_ShowInInspectorCheckbox_toggled"]
[connection signal="item_mouse_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_item_mouse_selected"]
[connection signal="item_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_item_selected"]
[connection signal="nothing_selected" from="VBoxContainer/Tree" to="." method="_on_Tree_nothing_selected"]
[connection signal="file_selected" from="SaveBranchFileDialog" to="." method="_on_SaveBranchFileDialog_file_selected"]
